# reader

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  Taskfile.yml  compose.yaml  package.json  pnpm-lock.yaml  turbo.json
.github/chatmodes/: sensei.chatmode.md
api/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  Taskfile.yml  compose.yaml  config.example  configs.py  logger.py  main.py  package.json  pyproject.toml  requirements.txt  swagger.json  testing.py  utils.py
api/api_requests/: bruno.json
api/api_requests/books/: Delete book by ID.bru  Upload book.bru
api/api_requests/environments/: local.bru
api/bruno/: Health check.bru
api/bruno/upload/: Valid upload request.bru  folder.bru
api/data/: File.py  Image.py  book.py
api/requirements/: all.txt  base.txt  dev.txt
api/routes/: chat.py  upload.py
api/src/: app.module.ts  configs.py  logger.py  main.ts  parser.py  storage.py  tools.py  utils.py
api/src/books/: books.controller.ts  books.service.ts  constants.py  parsers.py  router.py  schemas.py  service.py  utils.py
api/src/books/dto/: author.dto.ts  book.dto.ts  chapter.dto.ts  mocks.ts  upload-book.dto.ts
api/src/chat/: router.py
api/src/reader/: config.py  dependencies.py  logging.py  main.py
api/src/reader/api/: __init__.py
api/src/reader/api/books/: __init__.py  controller.py  model.py  service.py
api/tests/upload/: main.py
app/: .env.example  Dockerfile  Dockerfile.dev  package-lock.json  package.json  tsconfig.json  vite.config.ts
mono/: package.json
web/: package.json
(+97 files in other folders)
