[project]
name = "reader"
version = "0.1.0"
description = "Active reading"
readme = "README.md"

requires-python = ">=3.11"

dependencies = [
    "alembic>=1.17.2",
    "boto3>=1.42.3",
    "docling[rapidocr]>=2.61.2",
    "fastapi[standard]>=0.121.2",
    "pydantic-settings>=2.12.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "minio>=7.2.20",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
